# browser-use-progetto

./: .env.example  .gitignore  LICENSE  README.md  demo_src.md  pyproject.toml  requirements.txt
esempi/: complila_form.py  navigazione_multi.py  pipeline_ricerca.py  primo_agente.py  ricerca_dati.py  test_env.py
src/: __init__.py  agents.py  config.py  tools.py
